# reverso

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
checkpoints/reverso/: args.json
checkpoints/reverso_nano/: args.json
checkpoints/reverso_small/: args.json  checkpoint.pth
config/: downsample_factors.json
example/: eval_gift.py  forecast_demo.py  requirements.txt
reverso/: __init__.py  forecast.py  model.py
